fixed buildingSet model size limit made app visible in safari browser over Web@Work set responsive layout for different device sizes cleanup code

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -12,3 +12,7 @@
 .hintMissingBuildingsClass {
     color: #0563c1;
 }
+
+.sapMUSProgressBox {
+    visibility: hidden;
+}
